# engenharia-de-dados-apache-spark

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml
apache-iceberg/: index.html
delta-lake/: index.html
docs/: apache-iceberg.md  delta-lake.md  index.md
search/: search_index.json
spark-delta/: spark-delta-lake.ipynb
spark-delta-lake/: pyproject.toml
spark-delta/RAW/: .part-00000-c85c1749-808c-45b6-9cfc-51b156057b7c-c000.snappy.parquet.crc
spark-delta/RAW/CLIENTES/: .part-00000-6c0e1f0c-5586-472d-a20f-3f0c9d97b8bd-c000.snappy.parquet.crc  .part-00000-bbf31e2c-e062-4ef6-b6e9-63918e97a97d-c000.snappy.parquet.crc  .part-00002-13a1c3b3-24fe-4991-a099-1849c922f61d-c000.snappy.parquet.crc  .part-00005-81c5c83a-7b9c-41e2-b337-261e9590f39d-c000.snappy.parquet.crc  .part-00007-687b7409-7feb-4263-980c-f87c177cffb6-c000.snappy.parquet.crc  part-00000-6c0e1f0c-5586-472d-a20f-3f0c9d97b8bd-c000.snappy.parquet  part-00000-b3e8d6e6-d20c-435a-9e8d-a0495c39cc0f-c000.snappy.parquet  part-00000-bbf31e2c-e062-4ef6-b6e9-63918e97a97d-c000.snappy.parquet  part-00002-13a1c3b3-24fe-4991-a099-1849c922f61d-c000.snappy.parquet  part-00005-81c5c83a-7b9c-41e2-b337-261e9590f39d-c000.snappy.parquet  part-00007-687b7409-7feb-4263-980c-f87c177cffb6-c000.snappy.parquet
spark-delta/spark-warehouse/cliente_delta/: .part-00000-7adfde6b-5f7e-44d7-8b5a-19e43fe613c6-c000.snappy.parquet.crc  .part-00000-a573a6f6-6f9c-4e4d-813e-4e805c61f11a-c000.snappy.parquet.crc  (+10 more)
spark-iceberg/: README.MD  pyproject.toml  spark-iceberg.ipynb
(+28 files in other folders)
