[project]
name = "engenharia-de-dados-apache-spark"
version = "0.1.0"
description = ""
authors = [
    {name = "Guichardx2",email = "jeancharles.g.guichard@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs (>=1.6.1,<2.0.0)",
    "pyspark (>=3.5.5,<4.0.0)",
    "delta-spark (==3.0)",
    "jupyterlab (>=4.4.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
