[tool.poetry]
name = "engenharia-de-dados-apache-spark"
version = "0.1.0"
description = "Projeto Apache Spark com Apache Iceberg e Delta Lake"
authors = ["Guichardx2 jeancharles.g.guichard@gmail.com",
           "Lucas Silva lucasrs202@gmail.com",
           "Matheus Daminelli matheus.daminelli@gmail.com"
           ]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
mkdocs = ">=1.6.1,<2.0.0"
pyspark = ">=3.5.5,<4.0.0"
delta-spark = "==3.0"
jupyterlab = ">=4.4.1,<5.0.0"
mkdocs-material = "^9.6.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
